# bachelor-thesis

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  compile_commands.json  main.cpp
code/benchmarks/: m1pro_10000epochs_sequential.txt
code/benchmarks/m1pro/: benchmark_attempt1_1partitions_10threads.txt  benchmark_attempt1_1partitions_2threads.txt  benchmark_attempt1_2partitions_10threads.txt  benchmark_attempt1_2partitions_4threads.txt  benchmark_attempt1_2partitions_8threads.txt  benchmark_attempt1_4partitions_2threads.txt  benchmark_attempt1_4partitions_4threads.txt  benchmark_attempt1_8partitions_10threads.txt  benchmark_attempt1_8partitions_1threads.txt  benchmark_attempt1_8partitions_6threads.txt  benchmark_attempt2_1partitions_10threads.txt  benchmark_attempt2_1partitions_1threads.txt  benchmark_attempt2_1partitions_4threads.txt  benchmark_attempt2_1partitions_6threads.txt  benchmark_attempt2_1partitions_8threads.txt  benchmark_attempt2_2partitions_10threads.txt  benchmark_attempt2_2partitions_2threads.txt  benchmark_attempt2_2partitions_4threads.txt  benchmark_attempt2_2partitions_6threads.txt  benchmark_attempt2_2partitions_8threads.txt  benchmark_attempt2_4partitions_1threads.txt  (+51 more)
code/npp/: npp.cpp  npp_parallel.cpp
code/resources/: magic_normalized.txt  startnet_seed_1.net  startnet_seed_10.net  startnet_seed_2.net  startnet_seed_3.net  startnet_seed_4.net  startnet_seed_5.net  startnet_seed_6.net  startnet_seed_7.net  startnet_seed_8.net  startnet_seed_9.net  winequality_white_normalized.txt
code/scripts/: benchmark.bat
doc/: .gitignore  Makefile  (+4 more)
(+438 files in other folders)
